# learn-kubernetes-mirror

./: .gitignore  Dockerfile  README.md  hello-kubernetes.py  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.txt
.gitea/workflows/: local-raspi-k3s.yaml
.github/workflows/: mirror-code-qa.yaml
hello_kubernetes/: hello_kubernetes.py
k8s/: 10-namespace.yaml  20-volume.yaml  30-deployment.yaml  40-service.yaml  50-ingress.yaml  deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
tests/: test_hello-world.py
